--- a/Homeify.Server/Homeify.Server.csproj
+++ b/Homeify.Server/Homeify.Server.csproj
@@ -9,6 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="32feet.NET" Version="3.5.0" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
 
